--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <hl>Este es un sitio web con Github Pages</hl>
 <p>Y_fue creado con amor para el Curso de Git y Github de Platzi</p>
-<p><img src="https://i.imgur.com/PFA0M20.gif"/></p>
+<p><img src="https://i.imgur.com/PfA0M2o.gif"/></p>
